objects/Project_Milestone__c.object
<CustomObject>
    <description>Iterative funding milestones/tranches for grant projects with required documentation</description>
    <label>Project Milestone</label>
    <nameField>
        <displayFormat>MS-{00000}</displayFormat>
        <label>Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    
    <!-- Relationship to Grant Project (Master-Detail: C-4 fix) -->
    <fields>
        <fullName>Grant_Project__c</fullName>
        <label>Grant Project</label>
        <referenceTo>Grant_Project__c</referenceTo>
        <relationshipLabel>Project Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    
    <!-- Milestone Information -->
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <label>Milestone Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Number__c</fullName>
        <label>Milestone Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <required>true</required>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deliverables__c</fullName>
        <label>Expected Deliverables</label>
        <length>32768</length>
        <required>true</required>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Success_Criteria__c</fullName>
        <label>Success Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    
    <!-- Funding for this Milestone -->
    <fields>
        <fullName>Funds_Requested__c</fullName>
        <label>Funds Requested (USD)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funds_Approved__c</fullName>
        <label>Funds Approved (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Total__c</fullName>
        <label>Percentage of Total Grant</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    
    <!-- Timeline -->
    <fields>
        <fullName>Target_Start_Date__c</fullName>
        <label>Target Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Completion_Date__c</fullName>
        <label>Target Completion Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funds_Needed_By__c</fullName>
        <label>Funds Needed By</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Completion_Date__c</fullName>
        <label>Actual Completion Date</label>
        <type>Date</type>
    </fields>
    
    <!-- Status -->
    <fields>
        <fullName>Milestone_Status__c</fullName>
        <label>Milestone Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Pending Funding</fullName>
                </value>
                <value>
                    <fullName>Funded</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Documentation Submitted</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <!-- Documentation Requirements (for next tranche release) -->
    <fields>
        <fullName>Documentation_Required__c</fullName>
        <label>Documentation Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Documentation_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentation Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documentation_Upload_Date__c</fullName>
        <label>Documentation Upload Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Documentation_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documentation Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documentation_Approved_Date__c</fullName>
        <label>Documentation Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Documentation_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Documentation Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approved_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    
    <!-- Payment Status -->
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Ready</fullName>
                    <default>true</default>
                    <label>Not Ready</label>
                </value>
                <value>
                    <fullName>Ready for Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Processing</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Payment Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Transaction_ID__c</fullName>
        <label>Payment Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    <!-- Notes -->
    <fields>
        <fullName>Admin_Notes__c</fullName>
        <label>Admin Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recipient_Notes__c</fullName>
        <label>Recipient Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>